--- a/WebAppService/Areas/Admin/Views/DanhMucHeThong/DanhMucHeThong.cshtml
+++ b/WebAppService/Areas/Admin/Views/DanhMucHeThong/DanhMucHeThong.cshtml
@@ -55,13 +55,13 @@
             <div class="card w-100 border position-relative overflow-hidden">
                 <div class="card-body p-0">
                     <div class="form-group p-2">
-                        <button type="button" id="btnReset" class="btn bg-secondary-subtle text-secondary btn-sm p-2">
+                        <button type="button" id="btnReset" class="btn btn-success btn-sm">
                             <i class="ti ti-plus fs-2"></i> Tạo mới
                         </button>
-                        <button type="button" id="btnSaveData" class="btn bg-info-subtle text-info btn-sm p-2">
+                        <button type="button" id="btnSaveData" class="btn btn-primary btn-sm">
                             <i class="ti ti-upload fs-2"></i> Cập nhập
                         </button>
-                        <button type="button" id="btnRemoveData" class="btn bg-danger-subtle text-danger btn-sm p-2">
+                        <button type="button" id="btnRemoveData" class="btn btn-danger btn-sm">
                             <i class="ti ti-trash fs-2"></i> Xóa
                         </button>
                     </div>
